[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/sprites/bg2/parallax-mountain-bg.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/bg2/sun.png" type="Texture" id=2]
[ext_resource path="res://scenes/destroyer/destroyer.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/enemies/DestroyerV2_noshadow.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/primary_almendra.tres" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sprites/icons/bolt.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemies/DestroyerV2_eyes.png" type="Texture" id=7]
[ext_resource path="res://assets/scripts/variableLabel.gd" type="Script" id=8]
[ext_resource path="res://assets/sound/Harmful or Fatal.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/scripts/destroyer_music_starter.gd" type="Script" id=10]
[ext_resource path="res://scenes/ThemeButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/destroyer/MenuButtons.gd" type="Script" id=13]
[ext_resource path="res://scenes/help/help.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/sprites/ui/upgrade/upgrade_box.png" type="Texture" id=16]
[ext_resource path="res://assets/fonts/almendra-all-400-normal.woff" type="DynamicFontData" id=25]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.188482 )
colors = PoolColorArray( 0.670588, 0.415686, 0.54902, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "spawn"
length = 2.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.202186, 0.650273, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0.741176, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="DynamicFont" id=14]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=13]
size = 60
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 60
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 25 )

[node name="Destroyer" type="Node2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
bus = "Music"
script = ExtResource( 10 )

[node name="Backgrounds" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite" type="Sprite" parent="Backgrounds"]
position = Vector2( -795, -68 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite3" type="Sprite" parent="Backgrounds/Sprite"]
position = Vector2( 137.708, 26.5833 )
scale = Vector2( 0.135295, 55.1667 )
texture = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="Backgrounds/Sprite"]
position = Vector2( 113, 17 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Destroyer" type="Node2D" parent="Backgrounds/Sprite"]
position = Vector2( 76.8, 6 )
scale = Vector2( 0.1, 0.1 )

[node name="Sprite" type="Sprite" parent="Backgrounds/Sprite/Destroyer"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 419, 212 )
scale = Vector2( 3.54286, 3.54286 )
texture = ExtResource( 4 )
centered = false

[node name="Sprite2" type="Sprite" parent="Backgrounds/Sprite/Destroyer/Sprite"]
texture = ExtResource( 7 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Backgrounds/Sprite/Destroyer/Sprite"]
autoplay = "spawn"
anims/RESET = SubResource( 10 )
anims/spawn = SubResource( 11 )

[node name="dark" type="Sprite" parent="Backgrounds"]
position = Vector2( 800.343, 743.047 )
rotation = -1.5708
scale = Vector2( 0.158884, 1605.91 )
texture = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ui" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="VBoxContainer" parent="ui/Control"]
anchor_right = 0.25
anchor_bottom = 0.2
margin_right = -361.6
margin_bottom = -481.1
alignment = 1

[node name="LabelEnemy" type="Label" parent="ui/Control/Control"]
margin_right = 271.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 14 )
text = "Will be defeated in:"

[node name="LabelEnemy2" type="Label" parent="ui/Control/Control"]
margin_top = 51.0
margin_right = 271.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 14 )
text = "99 million years
---
99 years/months
99 days + 00:00:00"

[node name="LabelEnemy" type="Label" parent="ui/Control"]
anchor_right = 0.7
anchor_bottom = 0.088
margin_bottom = -0.200005
custom_fonts/font = SubResource( 13 )
text = "The Destroyer"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ui/Control"]
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.85
custom_constants/separation = -5

[node name="inventory" type="NinePatchRect" parent="ui/Control/VBoxContainer"]
self_modulate = Color( 0.623529, 0.745098, 0.752941, 1 )
margin_right = 480.0
margin_bottom = 100.0
rect_min_size = Vector2( 480, 100 )
texture = ExtResource( 16 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 5
patch_margin_bottom = 20

[node name="bolts" type="HBoxContainer" parent="ui/Control/VBoxContainer/inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 6
alignment = 1

[node name="TextureRect" type="TextureRect" parent="ui/Control/VBoxContainer/inventory/bolts"]
margin_left = 172.0
margin_right = 222.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="LabelFeathers" type="Label" parent="ui/Control/VBoxContainer/inventory/bolts"]
self_modulate = Color( 0.0588235, 0.54902, 0.729412, 1 )
margin_left = 226.0
margin_top = 10.0
margin_right = 307.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 9 )
text = "999"
align = 1
valign = 1
script = ExtResource( 8 )
targetEvent = "boltsUpdated"
defaultSaveFlag = 3

[node name="Button" type="Button" parent="ui/Control/VBoxContainer"]
margin_top = 95.0
margin_right = 480.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 15 )
text = "Add Mechanical Dice"

[node name="Button2" type="Button" parent="ui/Control/VBoxContainer"]
margin_top = 136.0
margin_right = 480.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 15 )
text = "Upgrade Mechanical Dice"

[node name="MenuButtons" type="HBoxContainer" parent="ui/Control"]
anchor_left = 0.7
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
custom_constants/separation = 10
alignment = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="back" parent="ui/Control/MenuButtons" instance=ExtResource( 11 )]
self_modulate = Color( 0.184314, 0.129412, 0.219608, 1 )
margin_top = 32.0
margin_right = 360.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
size_flags_vertical = 4
button_text = "Back"
modulate_default = Color( 0.184314, 0.129412, 0.219608, 1 )
modulate_hover = Color( 0.313726, 0.180392, 0.286275, 1 )

[node name="help" parent="ui/Control/MenuButtons" instance=ExtResource( 11 )]
self_modulate = Color( 0.556863, 0.407843, 0.0666667, 1 )
margin_left = 370.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 102.0
rect_min_size = Vector2( 90, 70 )
size_flags_vertical = 4
button_text = "Help"
modulate_default = Color( 0.556863, 0.407843, 0.0666667, 1 )

[node name="Help" parent="ui/Control" instance=ExtResource( 14 )]
visible = false
help_page = "destroyer"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="ui/Control/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ui/Control/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="button_clicked" from="ui/Control/MenuButtons/back" to="ui/Control/MenuButtons" method="_on_back_button_clicked"]
[connection signal="button_clicked" from="ui/Control/MenuButtons/help" to="ui/Control/MenuButtons" method="_on_help_button_clicked"]
